     and are followed by a sorted list of generated topics.
   * The Abilities and Traits sections were changed so that the overviews come
     first
   * Fixed a bug where the wrong ability description could be extracted from
     a unit type with multiple abilities. This was causing an incorrect
     description for Illuminate in Help.

Version 1.1.3:
 * campaigns
   * Two Brothers
     * made the 2nd scenario easier on easy: more starting gold, 4 extra
       villages, +10 income, less villages for the ai
     * added a hero icon for the dark adept
     * improved dialogs in the 2nd scenario
     * added a move_unit_fake to have Brenda not appear out of nowhere (easy
       only)
     * improved dialogs in the 3rd scenario
   * The South Guard
     * improved/additional dialog
     * new portraits
   * Heir to the Throne
     * Blackwater Port: secret bonus for beating the leader on hard
     * Isle of the Damned: adjusted temple contents to sync up with difficulty level
     * Scepter of Fire: major rebalance to relax the pace of the level
     * Home of the North Elves: army camps are invincible, elves defend you better
     * Marked heroes with {IS_HERO} macro
     * Increased minimum gold for most of campaign Act 2
   * The Rise of Wesnoth
     * Fixed portrait paths
     * Fixed map image paths
     * Switched to use of profile key in single unit definitions
     * Minor text cleanups
   * Under the Burning Suns
     * New unit artwork for Kaleh and Nym
     * Shrunk portraits to fit the Wesnoth standard of other campaigns
     * Removed Skirmish Ability from Desert Rider and Desert Outrider
     * Added Skirmish Ability to Desert Horseman
     * Increased melee damage of Desert Horseman from 4-3 to 5-3
     * Increased HP of the Desert Horseman from 45 to 50
     * Minor text cleanups
 * graphics
   * impassable mountain terrain
   * portraits: troll, assassin, dwarf-guard from old UtBS