@@ -10,6 +10,9 @@ Trunk (1.1.3+svn):
    * Fixed a bug where the wrong ability description could be extracted from
      a unit type with multiple abilities. This was causing an incorrect
      description for Illuminate in Help.
+ * WML engine
+   * modify ranged animation timing, all animations (attack, defend, missile
+   have the same clock)
 
 Version 1.1.3:
  * campaigns
